--- a/page2.html
+++ b/page2.html
@@ -12,6 +12,7 @@
         </ul>
         <br>
         <h3>just for practic :3</h3>
-        <h2><a href="http://127.0.0.1:5500/page1.html">back page</a></h2>
+        <h2><a href="http://127.0.0.1:5500/index.html">back page</a></h2>
     </body>
+
 </html>
