--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,7 @@
         <h2>more info</h2>
         <br>
         <ul>
-            <li><a href="https://pl.pinterest.com/" targer="_blank">pinterest</a></li>
+            <li><a href="https://pl.pinterest.com/" target="_blank">pinterest</a></li>
         </ul>
         <br>
         <h3>just for practic :3</h3>
@@ -16,4 +16,5 @@
     </body>
 
 </html>
+
 
